--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@ epsig2_cachefile_test_empty.json
 *.json
 epsig2.sublime-workspace
 *.sublime-workspace
+epsig2.sublime-workspace
+epsig2.sublime-workspace
+epsig2.sublime-workspace
